Changed several manifest.mf, plugin.xml, etc.

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -1,6 +1,17 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
+bin.includes = plugin.properties,\
+               META-INF/,\
                .,\
-               lib/
+               lib/,\
+               epl-v10.html,\
+               eclipse32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html
+src.includes = about.html,\
+               epl-v10.html,\
+               copyright.txt,\
+               src/
 jars.extra.classpath = lib/tools.jar
