--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -1,4 +1,15 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .
+bin.includes = plugin.properties,\
+               META-INF/,\
+               .,\
+               epl-v10.html,\
+               eclipse32.png,\
+               about.ini,\
+               about.properties,\
+               copyright.txt,\
+               about.html
+src.includes = about.html,\
+               epl-v10.html,\
+               copyright.txt,\
+               src/
