--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -13,3 +13,4 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
                src/
+jars.extra.classpath = lib/hibernate3.jar
