--- a/tests/org.eclipse.emf.teneo.jpox.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/dbadapters.properties
@@ -29,8 +29,8 @@
 # Note that the database name is not specified because this is set automatically
 
 mysql.dburl=jdbc:mysql://127.0.0.1:3306/
-mysql.dbuser=root
-mysql.dbpassword=root
+mysql.dbuser=teneo
+mysql.dbpassword=teneo
 mysql.dbdriver=com.mysql.jdbc.Driver
 mysql.dbadapter=org.eclipse.emf.teneo.test.stores.BaseTestDatabaseAdapter
 
