Exported packages from libraries

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -14,4 +14,10 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
                src/
-jars.extra.classpath = lib/tools.jar
+jars.extra.classpath = lib/tools.jar,\
+                       lib/jtds-1.1.jar,\
+                       lib/msbase.jar,\
+                       lib/mssqlserver.jar,\
+                       lib/msutil.jar,\
+                       lib/mysql-connector-java-3.1.10-bin.jar,\
+                       lib/postgresql-8.1-404.jdbc3.jar
