Removed import packages

--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -13,4 +13,5 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
                src/
-jars.extra.classpath = lib/hibernate3.jar
+jars.extra.classpath = lib/hibernate3.jar,\
+                       dom4j-1.6.1.jar
