Removed remaining org.elver.store links

--- a/plugins/org.eclipse.emf.teneo.jpox.eclipse/src/log4j.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox.eclipse/src/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootCategory=DEBUG, A1
 
 # A1 is set to be a ConsoleAppender.
-# Note that the log4j.append.A1.File is replaced by the plugin to point to the .metadata/.plugins/org.elver.store.jpox.eclipse
+# Note that the log4j.append.A1.File is replaced by the plugin to point to the .metadata/.plugins/org.eclipse.emf.teneo.jpox.eclipse
 # directory!
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
 log4j.appender.A1.File=emf-jpox-jdo.log 
