--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -5,4 +5,7 @@ bin.includes = META-INF/,\
 jars.extra.classpath = lib/dom4j-1.6.1.jar,\
                        lib/hibernate3.jar,\
                        lib/jdo2-api-2.0-rc1.jar,\
-                       lib/jpox-1.1.0-rc-1.jar
+                       lib/jpox-1.1.0-rc-1.jar,\
+                       lib/ejb3-persistence.jar,\
+                       lib/hibernate-entitymanager.jar,\
+                       lib/hibernate-annotations.jar
