--- a/doc/org.eclipse.emf.teneo.doc-feature/build.properties
+++ b/doc/org.eclipse.emf.teneo.doc-feature/build.properties
@@ -1,1 +1,11 @@
-bin.includes = feature.xml
+bin.includes = eclipse_update_120.jpg,\
+               epl-v10.html,\
+               feature.properties,\
+               feature.xml,\
+               license.html
+src.includes = eclipse_update_120.jpg,\
+               epl-v10.html,\
+               feature.properties,\
+               feature.xml,\
+               license.html
+root=rootfiles
