--- a/tests/org.eclipse.emf.teneo.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.tests/build.properties
@@ -2,6 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.properties,\
                META-INF/,\
+               test.xml,\
                epl-v10.html,\
                eclipse32.png,\
                about.ini,\
@@ -10,6 +11,7 @@ bin.includes = plugin.properties,\
                copyright.txt,\
                about.html
 src.includes = about.html,\
+               test.xml,\
                epl-v10.html,\
                copyright.txt,\
                src/
