Added register buddy in various locations

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.properties,\
                about.ini,\
                about.properties,\
                copyright.txt,\
-               about.html
+               about.html,\
+               src/log4j.properties
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
