--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.properties,\
                about.ini,\
                about.properties,\
                copyright.txt,\
-               about.html
+               about.html,\
+               test.xml
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
