Changed copyright statement to eclipse

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/test.properties
@@ -1,3 +1,18 @@
+# <copyright>
+#
+# Copyright (c) 2005, 2006 Springsite BV (The Netherlands) and others
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#   Martin Taal
+# </copyright>
+#
+# $Id: test.properties,v 1.2 2006/07/23 19:20:57 mtaal Exp $
+
+
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either SINGLE_TABLE or JOINED 
 # <cfgname>.optimistic= optimistic setting, either true or false
