--- a/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.1 2006/07/05 22:29:30 mtaal Exp $
+# * $Id: plugin.properties,v 1.2 2006/08/24 22:12:52 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -32,3 +32,6 @@ Plugin.providerName = Eclipse.org
 # %%% END OF TRANSLATED PROPERTIES %%%
 # The above properties have been shipped for translation.
 # ==============================================================================
+pluginName = HbAnnotation Model
+providerName = www.example.org
+
