Updated for build

--- a/plugins/org.eclipse.emf.teneo/build.properties
+++ b/plugins/org.eclipse.emf.teneo/build.properties
@@ -6,7 +6,10 @@ bin.includes = plugin.properties,\
                about.ini,\
                about.properties,\
                copyright.txt,\
-               about.html
+               about.html,\
+               .
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+jars.compile.order = .
+source.. = src/
