--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -4,6 +4,7 @@ bin.includes = plugin.properties,\
                epl-v10.html,\
                eclipse32.png,\
                about.ini,\
+               .,\
                about.properties,\
                copyright.txt,\
                about.html,\
@@ -11,3 +12,5 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+jars.compile.order = .
+source.. = src/
