Update for build

--- a/plugins/org.eclipse.emf.teneo/build.properties
+++ b/plugins/org.eclipse.emf.teneo/build.properties
@@ -1,3 +1,4 @@
+source.. = src/
 output.. = bin/
 bin.includes = plugin.properties,\
                META-INF/,\
@@ -7,9 +8,10 @@ bin.includes = plugin.properties,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               .
+               .,\
+               src/
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               src/
 jars.compile.order = .
-source.. = src/
