--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.properties,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               lib/
+               lib/,\
+               test.xml
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
