Moved jpox jars here to see if this solves classpath issues

--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -9,9 +9,18 @@ bin.includes = plugin.properties,\
                copyright.txt,\
                about.html,\
                lib/,\
-               test.xml
+               test.xml,\
+               lib/bcel-5.1.jar,\
+               lib/commons-logging.jar,\
+               lib/jdo2-api-2.0.jar,\
+               lib/jpox-1.1.1.jar,\
+               lib/jpox-enhancer-1.1.1.jar,\
+               lib/log4j-1.2.13.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 jars.compile.order = .
 source.. = src/
+bin.excludes = lib/jdo2-api-2.0-rc1.jar,\
+               lib/jpox-1.1.0-rc-1.jar,\
+               lib/jpox-enhancer-1.1.0-rc-1.jar
