Changed test password

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/dbadapters.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: dbadapters.properties,v 1.3 2006/07/23 19:20:57 mtaal Exp $
+# $Id: dbadapters.properties,v 1.4 2006/08/28 18:25:15 mtaal Exp $
 
 # used to set database connection props in the test classes
 
@@ -27,7 +27,7 @@
 
 mysql.dburl=jdbc:mysql://127.0.0.1:3306/
 mysql.dbuser=teneo
-mysql.dbpassword=teneo
+mysql.dbpassword=teneo1
 mysql.dbdriver=com.mysql.jdbc.Driver
 mysql.dbadapter=org.eclipse.emf.teneo.hibernate.test.stores.adapters.HibernateMysqlDBAdapter
 
