--- a/examples/org.eclipse.emf.teneo.samples/build.properties
+++ b/examples/org.eclipse.emf.teneo.samples/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.properties,\
                about.ini,\
                about.properties,\
                copyright.txt,\
-               about.html
+               about.html,\
+               src/org/eclipse/emf/teneo/samples/emf/sample/play/data/
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
