Moved jar to the root

--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -9,7 +9,7 @@ bin.includes = plugin.properties,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               lib/org.eclipse.emf.teneo.jpox.enhanced.jar
+               org.eclipse.emf.teneo.jpox.enhanced.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
