--- a/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/build.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/sourceTemplatePlugin/build.properties
@@ -1,3 +1,4 @@
+# NLS_MESSAGEFORMAT_VAR
 bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
@@ -6,5 +7,10 @@ bin.includes = plugin.xml,\
                about.properties,\
                eclipse32.gif,\
                src/,\
-               META-INF/
+               META-INF/,\
+               copyright.txt,\
+               epl-v10.html,\
+               feature.properties,\
+               feature.xml,\
+               license.html
 sourcePlugin = true
