Removed src from build.props

--- a/plugins/org.eclipse.emf.teneo/build.properties
+++ b/plugins/org.eclipse.emf.teneo/build.properties
@@ -12,6 +12,5 @@ bin.includes = plugin.properties,\
                src/
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt,\
-               src/
+               copyright.txt
 jars.compile.order = .
