--- a/plugins/org.eclipse.emf.teneo.sdk-feature/build.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/build.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: build.properties,v 1.1 2006/07/13 07:32:45 mtaal Exp $ build.properties,v 1.1 2005/11/25 20:30:36 cdamus Exp $
+# * $Id: build.properties,v 1.2 2006/09/01 20:32:33 mtaal Exp $ build.properties,v 1.1 2005/11/25 20:30:36 cdamus Exp $
 # */
 bin.includes = epl-v10.html,\
                eclipse_update_120.jpg,\
@@ -20,4 +20,4 @@ bin.includes = epl-v10.html,\
                feature.xml,\
                license.html
 root=rootfiles
-generate.feature@org.eclipse.emf.ocl.source=org.eclipse.emf.ocl
+generate.feature@org.eclipse.emf.teneo.source=org.eclipse.emf.teneo
