--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -11,7 +11,6 @@ bin.includes = plugin.properties,\
                about.html
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt,\
-               src/
+               copyright.txt
 jars.extra.classpath = lib/dom4j-1.6.1.jar,\
                        lib/hibernate3.jar
