--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                log4j-1.2.13.jar,\
                jpox-1.1.1.jar,\
                jpox-enhancer-1.1.1.jar,\
-               jdo2-api-2.0.jar
+               jdo2-api-2.0.jar,\
+               org.eclipse.emf.teneo.jpox.enhanced.jar
