--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -1,17 +1,17 @@
-source.. = src/
-output.. = bin/
+output.org.eclipse.emf.teneo.jpox.jar = bin/
 bin.includes = plugin.properties,\
                META-INF/,\
-               .,\
                epl-v10.html,\
                eclipse32.png,\
                about.ini,\
                about.properties,\
                copyright.txt,\
                about.html,\
-               org.eclipse.emf.teneo.jpox.enhanced.jar
+               org.eclipse.emf.teneo.jpox.enhanced.jar,\
+               org.eclipse.emf.teneo.jpox.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 jars.extra.classpath = lib/jdo2-api-2.0.jar,\
                        lib/jpox-1.1.1.jar
+source.org.eclipse.emf.teneo.jpox.jar = src/
