Changed load of file

--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -9,7 +9,9 @@ bin.includes = plugin.properties,\
                copyright.txt,\
                about.html,\
                .,\
-               test.xml
+               test.xml,\
+               src/org/eclipse/emf/teneo/jpox/test/run/,\
+               run/
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
