Moved hibernate samples to samples dir

--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -16,7 +16,8 @@ bin.includes = META-INF/,\
                javassist.jar,\
                jboss-archive-browsing.jar,\
                jta.jar,\
-               lucene-1.4.3.jar
+               lucene-1.4.3.jar,\
+               readme.txt
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
