--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,12 +1,15 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.8 2006/09/06 21:59:22 mtaal Exp $
+# $Id: build.properties,v 1.9 2006/09/07 07:51:53 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               src/test.properties,\
+               src/dbadapters.properties,\
+               test.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
