--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -10,7 +10,10 @@ bin.includes = plugin.properties,\
                about.html,\
                .,\
                test.xml,\
-               run/
+               run/,\
+               src/dbadapters.properties,\
+               src/emft_test.properties,\
+               src/test.properties
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
