--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/.classpath
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ant-antlr-1.6.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="antlr-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm.jar"/>
+	<classpathentry exported="true" kind="lib" path="asm-attrs.jar"/>
+	<classpathentry exported="true" kind="lib" path="c3p0-0.9.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="cglib-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-collections-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-logging-1.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="ehcache-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="ejb3-persistence.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate3.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate-annotations.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate-entitymanager.jar"/>
+	<classpathentry exported="true" kind="lib" path="javassist.jar"/>
+	<classpathentry exported="true" kind="lib" path="jboss-archive-browsing.jar"/>
+	<classpathentry exported="true" kind="lib" path="jta.jar"/>
+	<classpathentry exported="true" kind="lib" path="lucene-1.4.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins">
 		<accessrules>
