--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -1,8 +1,9 @@
 bin.includes = META-INF/,\
+               readme.txt,\
                bcel-5.1.jar,\
                commons-logging.jar,\
-               log4j-1.2.13.jar,\
+               jdo2-api-2.0.jar,\
+               jpox.jar,\
                jpox-1.1.1.jar,\
                jpox-enhancer-1.1.1.jar,\
-               jdo2-api-2.0.jar,\
-               readme.txt
+               log4j-1.2.13.jar
