--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -12,3 +12,5 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+jars.extra.classpath = dom4j-1.6.1.jar,\
+                       hibernate3.jar
