--- a/plugins/org.eclipse.emf.teneo-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo-feature/feature.properties
@@ -11,7 +11,7 @@
 #  *   Martin Taal
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2006/07/13 07:32:45 mtaal Exp $
+#  * $Id: feature.properties,v 1.2 2006/09/11 20:10:02 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -29,7 +29,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Teneo Hibernate
+featureName=Teneo EMF Persistence
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
@@ -38,7 +38,7 @@ providerName=Eclipse.org
 updateSiteName=Eclipse Modeling Framework Technology (EMFT) Updates
 
 # "description" property - description of the feature
-description=EMF Object Relational Persistence with Hibernate
+description=EMF Object Relational Persistence
 
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
