Added cvsignore to not commit libraries

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -20,7 +20,10 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/test/emf/annotations/ToOneAction.persistence.xml,\
                src/org/eclipse/emf/teneo/test/emf/annotations/_template.persistence.xml,\
                lib/mysql-connector-java-3.1.10-bin.jar,\
-               readme.txt
+               readme.txt,\
+               lib/tools.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+jars.extra.classpath = lib/mysql-connector-java-3.1.10-bin.jar,\
+                       lib/tools.jar
