--- a/deprecated/org.eclipse.emf.teneo.examples-feature/feature.properties
+++ b/deprecated/org.eclipse.emf.teneo.examples-feature/feature.properties
@@ -30,7 +30,7 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Eclipse Modeling Framework Technology Teneo Documentation
+featureName=Teneo EMF Persistence Examples
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
