--- a/tests/org.eclipse.emf.teneo.jpox.test/src/local_test.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/local_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: test.properties,v 1.4 2006/09/13 10:43:10 mtaal Exp $
+# $Id: local_test.properties,v 1.1 2006/09/14 03:47:01 mtaal Exp $
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either AllInOne or TablePerClass 
