--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -14,5 +14,4 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 source.org.eclipse.emf.teneo.jpox.jar = src/
-jars.extra.classpath = jdo2-api-2.0.jar,\
-                       jpox-1.1.2.jar
+jars.extra.classpath = jdo2-api-2.0.jar
