--- a/tests/org.eclipse.emf.teneo.jpox.test/src/local_test.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/local_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: local_test.properties,v 1.3 2006/09/21 00:57:12 mtaal Exp $
+# $Id: local_test.properties,v 1.4 2006/09/27 05:24:10 mtaal Exp $
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either AllInOne or TablePerClass 
@@ -19,9 +19,9 @@
 
 mysql_a_o.dbadapter=mysql
 mysql_a_o.mapstrategy=SINGLE_TABLE
-mysql_a_o.optimistic=false
+mysql_a_o.optimistic=true
 
 mysql_s_o.dbadapter=mysql
 mysql_s_o.mapstrategy=JOINED
-mysql_s_o.optimistic=false
+mysql_s_o.optimistic=true
 
