--- a/tests/org.eclipse.emf.teneo.jpox.test/src/emft_test.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/emft_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: emft_test.properties,v 1.5 2006/09/27 05:48:34 mtaal Exp $
+# $Id: emft_test.properties,v 1.6 2006/09/27 06:43:25 mtaal Exp $
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
 # <cfgname>.mapstrategy= mapping strategy, either AllInOne or TablePerClass 
@@ -19,9 +19,9 @@
 # Test properties for runs on the emft server, disabled part of them
 
 
-mysql_a_o.dbadapter=mysql
-mysql_a_o.mapstrategy=SINGLE_TABLE
-mysql_a_o.optimistic=true
+#mysql_a_o.dbadapter=mysql
+#mysql_a_o.mapstrategy=SINGLE_TABLE
+#mysql_a_o.optimistic=true
 
 mysql_s_o.dbadapter=mysql
 mysql_s_o.mapstrategy=JOINED
