[157747] Added support for EMap incl. testcase

--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -17,7 +17,33 @@ bin.includes = META-INF/,\
                javassist.jar,\
                jboss-archive-browsing.jar,\
                jta.jar,\
-               lucene-1.4.3.jar
+               lucene-1.4.3.jar,\
+               ant-1.6.5.jar,\
+               ant-junit-1.6.5.jar,\
+               ant-launcher-1.6.5.jar,\
+               ant-swing-1.6.5.jar,\
+               checkstyle-all.jar,\
+               cleanimports.jar,\
+               concurrent-1.3.2.jar,\
+               connector.jar,\
+               jaas.jar,\
+               jacc-1_0-fr.jar,\
+               jaxen-1.1-beta-7.jar,\
+               jboss-cache.jar,\
+               jboss-common.jar,\
+               jboss-jmx.jar,\
+               jboss-system.jar,\
+               jdbc2_0-stdext.jar,\
+               jgroups-2.2.8.jar,\
+               junit-3.8.1.jar,\
+               log4j-1.2.11.jar,\
+               oscache-2.1.jar,\
+               proxool-0.8.3.jar,\
+               swarmcache-1.0rc2.jar,\
+               syndiag2.jar,\
+               versioncheck.jar,\
+               xerces-2.6.2.jar,\
+               xml-apis.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
@@ -35,4 +61,30 @@ jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        javassist.jar,\
                        jboss-archive-browsing.jar,\
                        jta.jar,\
-                       lucene-1.4.3.jar
+                       lucene-1.4.3.jar,\
+                       ant-1.6.5.jar,\
+                       ant-junit-1.6.5.jar,\
+                       ant-launcher-1.6.5.jar,\
+                       ant-swing-1.6.5.jar,\
+                       checkstyle-all.jar,\
+                       cleanimports.jar,\
+                       concurrent-1.3.2.jar,\
+                       connector.jar,\
+                       jaas.jar,\
+                       jacc-1_0-fr.jar,\
+                       jaxen-1.1-beta-7.jar,\
+                       jboss-cache.jar,\
+                       jboss-common.jar,\
+                       jboss-jmx.jar,\
+                       jboss-system.jar,\
+                       jdbc2_0-stdext.jar,\
+                       jgroups-2.2.8.jar,\
+                       junit-3.8.1.jar,\
+                       log4j-1.2.11.jar,\
+                       oscache-2.1.jar,\
+                       proxool-0.8.3.jar,\
+                       swarmcache-1.0rc2.jar,\
+                       syndiag2.jar,\
+                       versioncheck.jar,\
+                       xerces-2.6.2.jar,\
+                       xml-apis.jar
