--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/local_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/local_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: test.properties,v 1.2 2006/07/23 19:20:57 mtaal Exp $
+# $Id: local_test.properties,v 1.1 2006/09/29 05:14:23 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
