Made naming in line with other features of Teneo

--- a/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
+++ b/plugins/org.eclipse.emf.teneo.sdk-feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2006/07/13 07:32:45 mtaal Exp $
+#  * $Id: feature.properties,v 1.2 2006/10/04 13:26:48 mtaal Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -35,7 +35,7 @@
 # ==============================================================================
 
 # "featureName" property - name of the feature
-featureName=Eclipse Modeling Framework Technology Teneo SDK
+featureName=Teneo EMF Persistence SDK
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
