--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -22,7 +22,8 @@ bin.includes = plugin.properties,\
                lib/mysql-connector-java-3.1.10-bin.jar,\
                readme.txt,\
                lib/tools.jar,\
-               src/org/eclipse/emf/teneo/test/emf/sample/Ecore.ecore
+               src/org/eclipse/emf/teneo/test/emf/sample/Ecore.ecore,\
+               lib/jtds-1.2.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
