--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.properties,\
                about.html,\
                org.eclipse.emf.teneo.jpox.enhanced.jar,\
                org.eclipse.emf.teneo.jpox.jar,\
-               src/plugin.xml
+               src/plugin.xml,\
+               plugin.xml
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
