--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -23,7 +23,10 @@ bin.includes = plugin.properties,\
                lib/tools.jar,\
                src/org/eclipse/emf/teneo/test/emf/sample/Ecore.ecore,\
                lib/jtds-1.2.jar,\
-               lib/mysql-connector-java-3.1.12-bin.jar
+               lib/mysql-connector-java-3.1.12-bin.jar,\
+               src/TestBlock.learningobjects,\
+               src/TestLU.learningobjects,\
+               src/Lang_de.learningobjects
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
