--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -26,7 +26,13 @@ bin.includes = plugin.properties,\
                lib/mysql-connector-java-3.1.12-bin.jar,\
                src/TestBlock.learningobjects,\
                src/TestLU.learningobjects,\
-               src/Lang_de.learningobjects
+               src/Lang_de.learningobjects,\
+               src/org/eclipse/emf/teneo/test/emf/sample/mindmap.xmi,\
+               src/org/eclipse/emf/teneo/test/emf/sample/mindmap_diagram.xmi,\
+               src/org/eclipse/emf/teneo/test/emf/sample/library.ecore,\
+               src/org/eclipse/emf/teneo/test/emf/sample/gmf.hbm.xml,\
+               src/org/eclipse/emf/teneo/test/emf/sample/default.mmd,\
+               src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
