Updated for jar

--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -1,6 +1,5 @@
 output.org.eclipse.emf.teneo.jpox.jar = bin/
-bin.includes = .,\
-               plugin.properties,\
+bin.includes = plugin.properties,\
                META-INF/,\
                epl-v10.html,\
                eclipse32.png,\
