--- a/tests/org.eclipse.emf.teneo.jpox.test/src/dbadapters.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/src/dbadapters.properties
@@ -1,6 +1,6 @@
 # <copyright>
 #
-# Copyright (c) 2005, 2006 Springsite BV (The Netherlands) and others
+# Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: dbadapters.properties,v 1.4 2006/08/25 23:04:07 mtaal Exp $
+# $Id: dbadapters.properties,v 1.5 2007/02/01 12:34:05 mtaal Exp $
 
 # used to set database connection props in the test classes
 
