--- a/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/plugin.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -13,7 +13,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: plugin.properties,v 1.3 2006/08/31 22:47:19 mtaal Exp $
+# * $Id: plugin.properties,v 1.4 2007/02/01 12:34:14 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
