--- a/doc/org.eclipse.emf.teneo.doc/about.properties
+++ b/doc/org.eclipse.emf.teneo.doc/about.properties
@@ -1,7 +1,7 @@
 #/**
 # * <copyright>
 # *
-# * Copyright (c) 2005, 2006 Springsite BV (The Netherlands) and others
+# * Copyright (c) 2005, 2006, 2007 Springsite BV (The Netherlands) and others
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: about.properties,v 1.1 2006/07/11 17:02:12 mtaal Exp $
+# * $Id: about.properties,v 1.2 2007/02/01 12:36:54 mtaal Exp $
 # */
 
 # NLS_MESSAGEFORMAT_VAR
