--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -1,6 +1,7 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.properties,\
+bin.includes = plugin.xml,\
+               plugin.properties,\
                META-INF/,\
                epl-v10.html,\
                eclipse32.png,\
