--- a/doc/org.eclipse.emf.teneo.doc/build.properties
+++ b/doc/org.eclipse.emf.teneo.doc/build.properties
@@ -12,7 +12,7 @@
 # *
 # * </copyright>
 # *
-# * $Id: build.properties,v 1.3 2007/02/01 12:36:54 mtaal Exp $
+# * $Id: build.properties,v 1.4 2007/02/10 00:14:04 mtaal Exp $
 # */
 bin.includes = META-INF/,\
                about.html,\
@@ -31,3 +31,6 @@ bin.includes = META-INF/,\
                plugin.properties,\
                doc.zip
 custom = true
+javacSource=1.5
+javacTarget=1.5
+
