Changed build.properties to 1.5 source level

--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -1,6 +1,7 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.properties,\
+bin.includes = plugin.xml,\
+               plugin.properties,\
                META-INF/,\
                epl-v10.html,\
                eclipse32.png,\
@@ -13,3 +14,5 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+javacSource=1.5
+javacTarget=1.5
