Changed build.properties to 1.5 source level

--- a/tests/org.eclipse.emf.teneo.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.tests/build.properties
@@ -15,3 +15,5 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt,\
                src/
+javacSource=1.5
+javacTarget=1.5
