--- a/plugins/org.eclipse.emf.teneo.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/build.properties
@@ -13,3 +13,5 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 jars.compile.order = .
+javacSource=1.5
+javacTarget=1.5
