Changed build.properties to 1.5 source level

--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.10 2006/11/12 00:07:57 mtaal Exp $
+# $Id: build.properties,v 1.11 2007/02/10 00:14:11 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -12,3 +12,5 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+javacSource=1.5
+javacTarget=1.5
