Changed build.properties to 1.5 source level

--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
@@ -14,3 +14,5 @@ src.includes = about.html,\
                copyright.txt
 jars.extra.classpath = dom4j-1.6.1.jar,\
                        hibernate3.jar
+javacSource=1.5
+javacTarget=1.5
