Changed build.properties to 1.5 source level

--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -10,3 +10,5 @@ bin.includes = META-INF/,\
                commons-dbcp-1.2.1.jar,\
                commons-pool-1.2.jar,\
                jpox-dbcp-1.1.3.jar
+javacSource=1.5
+javacTarget=1.5
