Changed build.properties to 1.5 source level

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -24,13 +24,7 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/test/emf/sample/Ecore.ecore,\
                lib/jtds-1.2.jar,\
                lib/mysql-connector-java-3.1.12-bin.jar,\
-               src/TestBlock.learningobjects,\
-               src/TestLU.learningobjects,\
-               src/Lang_de.learningobjects,\
-               src/org/eclipse/emf/teneo/test/emf/sample/mindmap.xmi,\
-               src/org/eclipse/emf/teneo/test/emf/sample/mindmap_diagram.xmi,\
                src/org/eclipse/emf/teneo/test/emf/sample/library.ecore,\
-               src/org/eclipse/emf/teneo/test/emf/sample/gmf.hbm.xml,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mmd,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap
 src.includes = about.html,\
@@ -39,3 +33,6 @@ src.includes = about.html,\
 jars.extra.classpath = lib/tools.jar,\
                        lib/jtds-1.2.jar,\
                        lib/mysql-connector-java-3.1.12-bin.jar
+javacSource=1.5
+javacTarget=1.5
+                       
