Changed build.properties to 1.5 source level

--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -21,3 +21,5 @@ jars.compile.order = .
 bin.excludes = lib/jdo2-api-2.0-rc1.jar,\
                lib/jpox-1.1.0-rc-1.jar,\
                lib/jpox-enhancer-1.1.0-rc-1.jar
+javacSource=1.5
+javacTarget=1.5
