--- a/plugins/org.eclipse.emf.teneo.jpox.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox.eclipse/build.properties
@@ -13,3 +13,5 @@ bin.includes = plugin.properties,\
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
+javacSource=1.5
+javacTarget=1.5
