--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -8,12 +8,12 @@ bin.includes = plugin.properties,\
                copyright.txt,\
                about.html,\
                org.eclipse.emf.teneo.jpox.enhanced.jar,\
-               org.eclipse.emf.teneo.jpox.jar,\
-               src/plugin.xml,\
-               plugin.xml
+               org.eclipse.emf.teneo.jpox.jar
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 source.org.eclipse.emf.teneo.jpox.jar = src/
 jars.extra.classpath = jdo2-api-2.0.jar,\
                        jpox-1.1.3.jar
+javacSource=1.5
+javacTarget=1.5
