--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -88,3 +88,5 @@ jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        versioncheck.jar,\
                        xerces-2.6.2.jar,\
                        xml-apis.jar
+javacSource=1.5
+javacTarget=1.5
