--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -15,3 +15,5 @@ src.includes = about.html,\
                copyright.txt
 jars.extra.classpath = dom4j-1.6.1.jar,\
                        hibernate3.jar
+javacSource=1.5
+javacTarget=1.5
