Updated test properties

--- a/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/src/emft_test.properties
@@ -10,7 +10,7 @@
 #   Martin Taal
 # </copyright>
 #
-# $Id: emft_test.properties,v 1.3.2.1 2007/02/11 20:43:42 mtaal Exp $
+# $Id: emft_test.properties,v 1.3.2.2 2007/02/12 06:18:30 mtaal Exp $
 
 
 # <cfgname>.dbadapter= name of a dbadapter (see dbadapters.properties)
@@ -29,9 +29,9 @@ mysql_s_o.optimistic=true
 #pgsql_s_o.mapstrategy=JOINED
 #pgsql_s_o.optimistic=true
 
-mssql_a_o.dbadapter=mcssql
-mssql_a_o.mapstrategy=SINGLE_TABLE
-mssql_a_o.optimistic=true
+#mssql_a_o.dbadapter=mcssql
+#mssql_a_o.mapstrategy=SINGLE_TABLE
+#mssql_a_o.optimistic=true
 
 #mssql_s_o.dbadapter=mcssql
 #mssql_s_o.mapstrategy=JOINED
