--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -32,7 +32,8 @@ src.includes = about.html,\
                copyright.txt
 jars.extra.classpath = lib/tools.jar,\
                        lib/jtds-1.2.jar,\
-                       lib/mysql-connector-java-3.1.12-bin.jar
+                       lib/mysql-connector-java-3.1.12-bin.jar,\
+                       lib/jdo2-api-2.0.jar
 javacSource=1.5
 javacTarget=1.5
                        
