--- a/plugins/org.eclipse.emf.teneo.jpox.enhanced/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox.enhanced/build.properties
@@ -2,3 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+jars.extra.classpath = platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jdo2-api-2.0.jar,\
+                       platform:/plugin/org.eclipse.emf.teneo.jpox.libraries/jpox-1.1.3.jar
