--- a/tests/org.eclipse.emf.teneo.jpox.libraries/.classpath
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/.classpath
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="bcel-5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-collections-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-dbcp-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="commons-pool-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="jpox-dbcp-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="jpox-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="jpox-enhancer-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="bcel-5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-pool-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="jdo2-api-2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="jpox-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="jpox-dbcp-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="jpox-enhancer-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="log4j-1.2.13.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
