--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -1,7 +1,7 @@
-bin.includes = .,\
+bin.includes = bcel-5.1.jar,\
                META-INF/,\
                readme.txt,\
-               bcel-5.1.jar,\
+               .,\
                commons-collections-3.1.jar,\
                commons-dbcp-1.2.1.jar,\
                commons-logging.jar,\
