Added model directory in src build

--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -1,7 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
-               plugin.properties,\
+bin.includes = plugin.properties,\
                META-INF/,\
                epl-v10.html,\
                eclipse32.png,\
@@ -13,6 +12,5 @@ bin.includes = plugin.xml,\
                about.html
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
-javacSource=1.5
-javacTarget=1.5
+               copyright.txt,\
+               model/
