--- a/plugins/org.eclipse.emf.teneo.annotations/build.properties
+++ b/plugins/org.eclipse.emf.teneo.annotations/build.properties
@@ -13,6 +13,8 @@ bin.includes = plugin.xml,\
                about.html
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               model/,\
+               license.html
 javacSource=1.5
 javacTarget=1.5
