--- a/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.mapper/build.properties
@@ -11,7 +11,8 @@ bin.includes = plugin.properties,\
                about.html
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               model/
 jars.extra.classpath = dom4j-1.6.1.jar,\
                        hibernate3.jar
 javacSource=1.5
