--- a/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.libraries/build.properties
@@ -43,7 +43,8 @@ bin.includes = META-INF/,\
                syndiag2.jar,\
                versioncheck.jar,\
                xerces-2.6.2.jar,\
-               xml-apis.jar
+               xml-apis.jar,\
+               hibernate-commons-annotations.jar
 jars.extra.classpath = ant-antlr-1.6.5.jar,\
                        antlr-2.7.6.jar,\
                        asm.jar,\
