--- a/plugins/org.eclipse.emf.teneo.hibernate/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate/build.properties
@@ -14,6 +14,9 @@ src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
 jars.extra.classpath = dom4j-1.6.1.jar,\
-                       hibernate3.jar
+                       hibernate3.jar,\
+                       ejb3-persistence.jar,\
+                       hibernate-annotations.jar,\
+                       hibernate-entitymanager.jar
 javacSource=1.5
 javacTarget=1.5
