--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -6,9 +6,9 @@ bin.includes = bcel-5.1.jar,\
                commons-logging.jar,\
                commons-pool-1.2.jar,\
                jdo2-api-2.0.jar,\
-               jpox-1.1.3.jar,\
                jpox-dbcp-1.1.3.jar,\
-               jpox-enhancer-1.1.3.jar,\
-               log4j-1.2.13.jar
+               log4j-1.2.13.jar,\
+               jpox-1.1.7.jar,\
+               jpox-enhancer-1.1.7.jar
 javacSource=1.5
 javacTarget=1.5
