--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -1,4 +1,4 @@
-# Set root logger level to debug and its only appender to A1.
+# Set root logger level to error and its only appender to A1.
 log4j.rootCategory=error, A1
 
 # A1 is set to be a ConsoleAppender.
