--- a/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.libraries/build.properties
@@ -4,11 +4,9 @@ bin.includes = META-INF/,\
                commons-logging.jar,\
                jdo2-api-2.0.jar,\
                log4j-1.2.13.jar,\
-               jpox-1.1.3.jar,\
-               jpox-enhancer-1.1.3.jar,\
                commons-collections-3.1.jar,\
                commons-dbcp-1.2.1.jar,\
                commons-pool-1.2.jar,\
-               jpox-dbcp-1.1.3.jar
-javacSource=1.5
-javacTarget=1.5
+               jpox-dbcp-1.1.3.jar,\
+               jpox-1.1.7.jar,\
+               jpox-enhancer-1.1.7.jar
