--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -13,7 +13,8 @@ bin.includes = plugin.properties,\
                run/,\
                src/dbadapters.properties,\
                src/emft_test.properties,\
-               src/local_test.properties
+               src/local_test.properties,\
+               jdo/
 src.includes = about.html,\
                epl-v10.html,\
                copyright.txt
