--- a/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/src/log4j.properties
@@ -1,6 +1,8 @@
 # Set root logger level to error and its only appender to A1.
 log4j.rootCategory=error, A1
 
+log4j.category.JPOX=OFF
+
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 
