Included generated jdo/hbm files in the build

--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,16 +1,18 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.11 2007/02/10 00:14:11 mtaal Exp $
+# $Id: build.properties,v 1.12 2007/07/12 19:07:23 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
                src/dbadapters.properties,\
-               test.xml
+               test.xml,\
+               hbm/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
 javacSource=1.5
 javacTarget=1.5
+src.includes = hbm/
