--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -17,7 +17,8 @@ bin.includes = plugin.properties,\
                jdo/
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               jdo/
 jars.compile.order = .
 bin.excludes = lib/jdo2-api-2.0-rc1.jar,\
                lib/jpox-1.1.0-rc-1.jar,\
