Changed location of test.hbm.xml

--- a/tests/org.eclipse.emf.teneo.commontest/build.properties
+++ b/tests/org.eclipse.emf.teneo.commontest/build.properties
@@ -26,10 +26,12 @@ bin.includes = plugin.properties,\
                lib/mysql-connector-java-3.1.12-bin.jar,\
                src/org/eclipse/emf/teneo/test/emf/sample/library.ecore,\
                src/org/eclipse/emf/teneo/test/emf/sample/default.mmd,\
-               src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap
+               src/org/eclipse/emf/teneo/test/emf/sample/default.mindmap,\
+               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               src/org/eclipse/emf/teneo/test/emf/test.hbm.xml
 jars.extra.classpath = lib/tools.jar,\
                        lib/jtds-1.2.jar,\
                        lib/mysql-connector-java-3.1.12-bin.jar,\
