Changed location of test.hbm.xml

--- a/examples/org.eclipse.emf.teneo.samples/build.properties
+++ b/examples/org.eclipse.emf.teneo.samples/build.properties
@@ -17,6 +17,7 @@ bin.includes = plugin.properties,\
                src/org/eclipse/emf/teneo/test.hbm.xml
 src.includes = about.html,\
                epl-v10.html,\
-               copyright.txt
+               copyright.txt,\
+               src/org/eclipse/emf/teneo/test.hbm.xml
 javacSource=1.5
 javacTarget=1.5
