Changed location of test.hbm.xml

--- a/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.hibernate.test/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.14 2007/07/18 18:57:14 mtaal Exp $
+# $Id: build.properties,v 1.15 2007/07/18 20:56:50 mtaal Exp $
 
 bin.includes = .,\
                META-INF/,\
@@ -10,10 +10,12 @@ bin.includes = .,\
                src/dbadapters.properties,\
                hbm/,\
                src/log4j.properties,\
-               test.xml
+               test.xml,\
+               src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml
 jars.compile.order = .
 source.. = src/
 output.. = bin/
 javacSource=1.5
 javacTarget=1.5
-src.includes = hbm/
+src.includes = hbm/,\
+               src/org/eclipse/emf/teneo/hibernate/test/emf/test.hbm.xml
