[177595] purge old eclipse icons; only need modeling32.png now

--- a/doc/org.eclipse.emf.teneo.doc/build.properties
+++ b/doc/org.eclipse.emf.teneo.doc/build.properties
@@ -12,21 +12,14 @@
 # *
 # * </copyright>
 # *
-# * $Id: build.properties,v 1.4 2007/02/10 00:14:04 mtaal Exp $
+# * $Id: build.properties,v 1.5 2007/08/27 22:27:14 nickb Exp $
 # */
 bin.includes = META-INF/,\
                about.html,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               eclipse.gif,\
-               eclipse.png,\
-               eclipse24.gif,\
-               eclipse32.gif,\
-               eclipse48.gif,\
-               eclipse32.png,\
-               eclipse48.png,\
-               eclipse_lg.gif,\
+               modeling32.png,\
                plugin.xml,\
                plugin.properties,\
                doc.zip
