--- a/plugins/org.eclipse.emf.teneo.jpox/build.properties
+++ b/plugins/org.eclipse.emf.teneo.jpox/build.properties
@@ -2,7 +2,7 @@ output.org.eclipse.emf.teneo.jpox.jar = bin/
 bin.includes = plugin.properties,\
                META-INF/,\
                epl-v10.html,\
-               eclipse32.png,\
+               modeling32.png,\
                about.ini,\
                about.properties,\
                copyright.txt,\
