--- a/doc/org.eclipse.emf.teneo.doc/build.xml
+++ b/doc/org.eclipse.emf.teneo.doc/build.xml
@@ -7,7 +7,7 @@
 	<property name="plugin" value="org.eclipse.emf.teneo"/>
 	<property name="docPlugin" value="org.eclipse.emf.teneo.doc"/>
 
-	<property name="filesToInclude" value="META-INF/,about.html,about.ini,about.mappings,about.properties,eclipse.gif,eclipse.png,eclipse24.gif,eclipse32.gif,eclipse48.gif,eclipse32.png,eclipse48.png,eclipse_lg.gif,plugin.xml,plugin.properties,doc.zip,toc.xml,topics_*.xml,index/**"/>
+	<property name="filesToInclude" value="META-INF/,about.*,modeling32.png,plugin.*,doc.zip,toc.xml,topics_*.xml,index/**"/>
 
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="false"/>
