--- a/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
+++ b/plugins/org.eclipse.emf.teneo.hibernate.eclipse/build.properties
@@ -4,7 +4,7 @@ bin.includes = plugin.properties,\
                META-INF/,\
                .,\
                epl-v10.html,\
-               eclipse32.png,\
+               modeling32.png,\
                about.ini,\
                about.properties,\
                copyright.txt,\
