--- a/tests/org.eclipse.emf.teneo.jpox.test/build.properties
+++ b/tests/org.eclipse.emf.teneo.jpox.test/build.properties
@@ -3,7 +3,7 @@ output.. = bin/
 bin.includes = plugin.properties,\
                META-INF/,\
                epl-v10.html,\
-               eclipse32.png,\
+               modeling32.png,\
                about.ini,\
                about.properties,\
                copyright.txt,\
