--- a/tests/org.eclipse.emf.teneo.tests/build.properties
+++ b/tests/org.eclipse.emf.teneo.tests/build.properties
@@ -4,7 +4,7 @@ bin.includes = plugin.properties,\
                META-INF/,\
                test.xml,\
                epl-v10.html,\
-               eclipse32.png,\
+               modeling32.png,\
                about.ini,\
                about.properties,\
                .,\
