Several smaller changes. Added first steps into generation jpa annotations in the source code.

--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -1,6 +1,15 @@
+
+# <copyright>
+# </copyright>
+#
+# $Id: build.properties,v 1.7 2007/11/14 16:37:24 mtaal Exp $
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties,\
+               mysql-connector-java-3.1.12-bin.jar
+jars.compile.order = .
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .
-javacSource=1.5
-javacTarget=1.5
