Removed jar file as it should not be uploaded

--- a/examples/org.eclipse.emf.teneo.tutorial/build.properties
+++ b/examples/org.eclipse.emf.teneo.tutorial/build.properties
@@ -2,14 +2,13 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.7 2007/11/14 16:37:24 mtaal Exp $
+# $Id: build.properties,v 1.8 2007/11/14 16:44:36 mtaal Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               mysql-connector-java-3.1.12-bin.jar
+               plugin.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
